style/common/_override.scss
/* ... */
.entry-inputs > input[type="checkbox"] {
    flex:1
}

.entry-list {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.entry-list .entry-content {
    display: flex;
}

.entry-list .entry-element {
    display : flex;
    justify-content: space-around;
    align-items: center;
    text-align: center;
}

.entry-list .inline-list{
    display: flex;
    flex-wrap: wrap;
}


.entry-list .inline-list > *{
    margin: 3px;
    border: 1px solid darkslategray;
    background: rgba(0, 0, 0, 0.05);
    border-radius: 5px;
    padding: 2px;
}



.entry-list .entry-element > *{
    flex: 1
}

.entry-list .entry-element > .entry-controls{
    flex: 0 0 60px;
}

.entry-list .entry-element > a{
    flex: unset;
    margin: 0px 5px;
}


.entry-list .entry-element .ratio {
    display: flex;
    align-items: center;
    justify-content: center;
}

.entry-list .entry-element .ratio > * {
    flex: unset
}

.entry-list .entry-element .ratio > input {
    flex : 0 0 30px
}

.entry-list .entry-element.equipment:hover,
    .entry-list .entry-element.talents:hover {
    cursor: pointer;
    text-shadow: 0 0 8px goldenrod
    
}





.dialog-value {
    display:flex;
    flex-direction: row;
    justify-content: center;
    text-align: center;
    border:none;
}

.dialog input{
    border:none;
}

.dialog select{
    border:none;
}



.editor,
.journal-entry-page.text {
  font-family: var(--font-text);
  font-size: 15px;
  color: var(--color-text);
}

.editor h1,
.journal-page-content h1 { 
    font-family: var(--font-header);
    text-transform: uppercase;
    color: var(--color-header-gold);
    font-size: 40px;
    text-align: center;
    border: 2px solid var(--color-header-gold);
    border-left: 0px;
    border-right: 0px;
    line-height: 26px;
    padding-top: 4px;
}

.journal-sheet input{
  font-family: var(--font-header);
  color : var(--color-header-gold);
  text-align: center;
  border: 2px solid var(--color-header-gold);
  border-left: 0px;
  border-right: 0px;
  border-radius: 0px;
}

.editor h2,
.journal-page-content h2 { 
  font-family: var(--font-header);
  text-transform: uppercase;
  font-size: 26px;
  color: var(--color-header-gold);
  border-bottom: 2px solid var(--color-header-gold);
}

.editor h3,
.journal-page-content h3 { 
  font-family: var(--font-header);
  font-size : 28px;
  font-variant: small-caps;
  color: var(--color-header-blue);
  border: none;
}

.editor h3.like-h1,
.journal-page-content h3.like-h1 { 
font-family: var(--font-header);
text-transform: uppercase;
color: var(--color-header-gold);
font-size: 40px;
text-align: center;
border: 2px solid var(--color-header-gold);
border-left: 0px;
border-right: 0px;
line-height: 26px;
padding-top: 4px;
}

.editor .block h3,
.journal-page-content .block h3 { 
  font-family: var(--font-header);
  margin: 20px 0px;
  text-align: center;
  font-variant: small-caps;
  font-size: 24px;
  border: none;
  color: var(--color-header-gold)
}

.journal-page-content .sidebar,
.editor .sidebar {
    border-left: 3px solid darkgoldenrod
}

.editor.sidebar h4,
.journal-page-content .sidebar h4 {
    text-transform: unset;
    font-size: 16px;
}
.journal-page-content .sidebar h3,
.editor .sidebar h3 {
    font-size: initial;
}

.editor  h4,
.journal-page-content  h4 { 
  font-family: var(--font-header);
  border: none;
  font-size: 20px;
  text-transform: uppercase;
  color: var(--color-header-blue)
}

.editor  h5,
.journal-page-content  h5 { 
  font-family: var(--font-header);
  border: none;
  font-size: 16px;
  text-transform: uppercase;
  color: black;
  margin: 0 0 0.5rem;
  font-weight: normal
}

.editor .block,
.journal-page-content .block {
    background-color: black;
    font-family: var(--font-sidebar);
    color: white;
    border: 5px solid transparent;
    border-image: url(./asset/image/sidebar-border.webp) 8 8 8 8 repeat repeat;
    margin-right: 10px;
} 

/* .editor .block::before,
.journal-entry-page.text .block::before {
    content: "";
    background-image: url(./asset/image/block-top.webp) ;
} */

.editor table,
.journal-entry-page.text table {
    /*background: url(./asset/image/input-bg.webp);
    background-size: fill;*/
    border: 1px solid var(--color-header-gold)
}

.editor table td,
.journal-entry-page.text table td {
    border: 1px solid var(--color-header-gold)
}

.editor table .table-header,
.journal-entry-page.text table .table-header {
    background: url(./asset/image/header-background.webp);
    background-size: cover;
    text-transform: uppercase;
    color: white;
    font-size: 20px;
    font-family: var(--font-header);
}
table tr:nth-child(even) {
    background-color: rgba(0, 0, 0, 0.1);
}


/* .placeable-hud .control-icon, */
#controls ol.control-tools > li,
    #controls ol.scene-controls > li {
        color: white;
    background: url(./asset/image/header.webp) repeat;
    background-size: 50%;
    border: 1px solid var(--color-header-gold)
}

#controls ol.control-tools > li.active,
#controls ol.scene-controls > li.active {
    border: 1px solid var(--color-active);
    background: url(./asset/image/background.webp) repeat;
    color: var(--color-header-blue);
    box-shadow: 0 0 10px var(--color-active)
}

#controls ol.control-tools  > li:hover,
#controls ol.scene-controls > li:hover {
    border: 1px solid var(--color-active);
}

#navigation #scene-list .scene.view {
    color: var(--color-header-blue);
    border: 1px solid var(--color-active);
    background: url(./asset/image/background.webp) repeat;
    box-shadow: 0 0 10px var(--color-active);
}

#navigation #scene-list .scene {
    color: white;
    font-family: var(--font-sidebar);
    border: 1px solid var(--color-header-gold);
    background: url(./asset/image/header.webp) repeat;
}

#navigation #scene-list .scene.context {
    border: 1px solid var(--color-active);
}
/* ... */

